@@ -136,7 +136,7 @@ public class PostServiceTest {
         verify(postDaoRepository).countPosts(criteriaCaptor.capture());
         verify(postDaoRepository).findPostsForPage(criteriaCaptor.capture(), eq(pageNumber), eq(pageSize));
 
-        PostSearchCriteria usedCriteria = criteriaCaptor.getAllValues().get(0);
+        PostSearchCriteria usedCriteria = criteriaCaptor.getAllValues().getFirst();
         assertEquals("Spring", usedCriteria.getTitleSubstring());
         assertTrue(usedCriteria.getTags().isEmpty());
     }
@@ -153,13 +153,13 @@ public class PostServiceTest {
         PostsPageDto result = postService.findAll("#java #spring", pageNumber, pageSize);
 
         assertEquals(1, result.getPosts().size());
-        assertTrue(result.getPosts().get(0).getTags().containsAll(List.of("java", "spring")));
+        assertTrue(result.getPosts().getFirst().getTags().containsAll(List.of("java", "spring")));
 
         ArgumentCaptor<PostSearchCriteria> criteriaCaptor = ArgumentCaptor.forClass(PostSearchCriteria.class);
         verify(postDaoRepository).countPosts(criteriaCaptor.capture());
         verify(postDaoRepository).findPostsForPage(criteriaCaptor.capture(), eq(pageNumber), eq(pageSize));
 
-        PostSearchCriteria usedCriteria = criteriaCaptor.getAllValues().get(0);
+        PostSearchCriteria usedCriteria = criteriaCaptor.getAllValues().getFirst();
         assertEquals("", usedCriteria.getTitleSubstring());
         assertEquals(List.of("java", "spring"), usedCriteria.getTags());
     }
@@ -176,7 +176,7 @@ public class PostServiceTest {
         PostsPageDto result = postService.findAll("#java Spring Boot", pageNumber, pageSize);
 
         assertEquals(1, result.getPosts().size());
-        Post resultPost = result.getPosts().get(0);
+        Post resultPost = result.getPosts().getFirst();
         assertEquals("Spring Boot Guide", resultPost.getTitle());
         assertTrue(resultPost.getTags().contains("java"));
 
@@ -184,7 +184,7 @@ public class PostServiceTest {
         verify(postDaoRepository).countPosts(criteriaCaptor.capture());
         verify(postDaoRepository).findPostsForPage(criteriaCaptor.capture(), eq(pageNumber), eq(pageSize));
 
-        PostSearchCriteria usedCriteria = criteriaCaptor.getAllValues().get(0);
+        PostSearchCriteria usedCriteria = criteriaCaptor.getAllValues().getFirst();
         assertEquals("Spring Boot", usedCriteria.getTitleSubstring());
         assertEquals(List.of("java"), usedCriteria.getTags());
     }
